--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: zhenglinsmile@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   学而，时习之.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://okfine.top" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://xiaolinzi12.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  xiaolinzi12
 
