--- a/my-blog/_config.yml
+++ b/my-blog/_config.yml
@@ -17,7 +17,7 @@ title: 小林子的个人博客
 email: zhenglinsmile@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   学而，时习之.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/my-blog" # the subpath of your site, e.g. /blog
 url: "http://xiaolinzi12.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  xiaolinzi12
