--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
-title:             Clean Blog
-email:             your-email@example.com
-description:       A Blog Theme by Start Bootstrap
-author:            Start Bootstrap
+title: 小林子的个人博客
+email: zhenglinsmile@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  学而，时习之.
 baseurl:           ""
 url:               "https://xiaolinzi12.github.io"
 
 # Social Profiles
-twitter_username:  SBootstrap
-github_username:   BlackrockDigital
-facebook_username: StartBootstrap
+github_username:   xiaolinzi12
 
 # Build settings
 markdown:          kramdown
