--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: zhenglinsmile@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   学而，时习之.
 baseurl:           ""
-url:               "https://xiaolinzi12.github.io"
+url:               "https://okfine.top"
 
 # Social Profiles
 github_username:   xiaolinzi12
