修改邮箱地址

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 小林子的个人博客
-email: zhenglinsmile@gmail.com
+email: xiaolintsang@163.com
 description: >- # this means to ignore newlines until "baseurl:"
   学而，时习之.
 baseurl:           ""
